--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -52,7 +52,7 @@
 <!-- content starts here -->
 <h1> The Vegan Cheesemonger</h1>
 <h2> Your source for artisanal plant-based cheeses </h2>
-<div id="main-image" style="text-align: center;"><img src="https://www.freshnlean.com/wp-content/uploads/raw-vegan-almond-cheese.jpg" alt="vegan cheese" width="30%" height="30%"/></div>
+<div id="main-image" style="text-align: center;"><img src="https://www.freshnlean.com/wp-content/uploads/raw-vegan-almond-cheese.jpg" alt="vegan cheese" width="30%" height="30%";/></div>
 
 <!-- content ends here -->
 
