--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -2,29 +2,32 @@
 
 <h1>Listing Products</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Description</th>
-      <th>Image url</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<div class="container">
+  <div class="table-header">
+    <div class="row">
+      <div class="col-sm-2">Name</div>
+      <div class="col-sm-2">Description</div>
+      <div class="col-sm-3">Image</div>
+      <div class="col-sm-2">Color</div>
+      <div class="col-sm-3"></div>
+    </div>
+  </div>
 
-  <tbody>
+  <div class="table-content">
     <% @products.each do |product| %>
-      <tr>
-        <td><%= product.name %></td>
-        <td><%= product.description %></td>
-        <td><%= product.image_url %></td>
-        <td><%= link_to 'Show', product %></td>
-        <td><%= link_to 'Edit', edit_product_path(product) %></td>
-        <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+      <div class="row">
+        <div class="col-sm-2"><%= product.name %></div>
+        <div class="col-sm-2"><%= product.description %></div>
+        <div class="col-sm-3"><%= image_tag(product.image_url, :style => 'height: 120px; width: 120px;') %></div>
+        <div class="col-sm-2">Color</div>
+        <div class="col-sm-1">
+          <%= link_to 'Show', product %></div>
+        <div class="col-sm-1"><%= link_to 'Edit', edit_product_path(product) %></div>
+        <div class="col-sm-1"><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></div>
+      </div>
     <% end %>
-  </tbody>
-</table>
+  </div>
+</div>
 
 <br>
 
