--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -7,8 +7,9 @@
     <div class="row">
       <div class="col-sm-2">Name</div>
       <div class="col-sm-2">Description</div>
-      <div class="col-sm-3">Image</div>
+      <div class="col-sm-2">Image</div>
       <div class="col-sm-2">Color</div>
+      <div class="col-sm-1">Price</div>
       <div class="col-sm-3"></div>
     </div>
   </div>
@@ -18,10 +19,10 @@
       <div class="row">
         <div class="col-sm-2"><%= product.name %></div>
         <div class="col-sm-2"><%= product.description %></div>
-        <div class="col-sm-3"><%= image_tag(product.image_url, :style => 'height: 120px; width: 120px;') %></div>
-        <div class="col-sm-2">Color</div>
-        <div class="col-sm-1">
-          <%= link_to 'Show', product %></div>
+        <div class="col-sm-2"><%= image_tag(product.image_url, :style => 'height: 120px; width: 120px;') %></div>
+        <div class="col-sm-2"><%= product.color %></div>
+        <div class="col-sm-1"><%= product.price %></div>
+        <div class="col-sm-1"><%= link_to 'Show', product %></div>
         <div class="col-sm-1"><%= link_to 'Edit', edit_product_path(product) %></div>
         <div class="col-sm-1"><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></div>
       </div>
