--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -23,12 +23,16 @@
     <%= f.label :image_url %><br>
     <%= f.text_field :image_url %>
   </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
   <div class="field">
     <%= f.label :color %><br>
     <%= f.text_field :color %>
-  </div> 
+  </div>
+  <div class="field">
+    <%= f.label :price %><br>
+    <%= f.text_field :price %>
+  </div
+  <div class="actions">
+    <%= f.submit %>
+  </div>
   
 <% end %>
