product index fixed

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -15,9 +15,7 @@
   </div>
 
   <div class="table-content">
- <% @products.each do |product| %>
-    <%= render @products %>
-  <% end %>
+    <%= render partial: "products/product", collection: @products %>
   </div>
 </div>
 
