route changed, links added

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,2 +1,2 @@
-<h1>StaticPages#about</h1>
-<p>Hello! My name is Richard. </p>
+<h1>About Me</h1>
+<p>Hello! My name is Richard. This website was created as a demo to learn rails.</p>
