--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,14 +33,16 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Home</a></li>
+        <li><a href="static_pages/index">Home</a></li>
+        <li><a href="static_pages/about">About</a></li>
+        <li><a href="static_pages/contact">Contact</a></li>
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Cheeses <span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Products <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Hard</a></li>
-            <li><a href="#">Semi-soft</a></li>
-            <li><a href="#">Soft</a></li>
-            <li><a href="#">Fondue & Spreads</a></li>
+            <li><a href="products">Hard</a></li>
+            <li><a href="products">Semi-soft</a></li>
+            <li><a href="products">Soft</a></li>
+            <li><a href="products">Fondue & Spreads</a></li>
           </ul>
         </li>
       </ul>
