--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,16 +33,26 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="static_pages/index">Home</a></li>
-        <li><a href="static_pages/about">About</a></li>
-        <li><a href="static_pages/contact">Contact</a></li>
+        <li>
+          <%= link_to 'Home', static_pages_landing_page_path%>
+        </li>
+        <li> 
+          <%= link_to 'About', static_pages_about_path%>
+        </li>
+        <li>
+          <%= link_to 'Contact', static_pages_contact_path%>
+          </li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Products <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="products">Hard</a></li>
-            <li><a href="products">Semi-soft</a></li>
-            <li><a href="products">Soft</a></li>
-            <li><a href="products">Fondue & Spreads</a></li>
+            <li>
+              <%= link_to 'Hard Cheeses', products_path%>
+            </li>
+            <li>
+              <%= link_to 'Soft Cheeses', products_path%>
+            </li>
+            <li>
+              <%= link_to 'Cheese Spreads', products_path%>
           </ul>
         </li>
       </ul>
