registration/sign-in created

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -65,3 +65,31 @@ footer {
 .form-group {
     color: gray; 
 }
+
+ /* Registration Page */ 
+
+ #sign_up_page {
+   background-color: #87b6a7;
+   padding-top: 10px;
+   border-radius: 10px;
+ }
+
+ /* Forgot Password Page */
+
+ #forgot-password {
+   background-color: #87b6a7;
+   padding-top: 10px;
+   border-radius: 10px;
+ }
+
+/* Sign in Page */
+
+ #sign_in_page {
+   background-color: #87b6a7;
+   padding-top: 10px;
+   border-radius: 10px;
+ }
+ 
+ #remember_me {
+     color: #fff;
+ }
