--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -93,3 +93,46 @@ footer {
  #remember_me {
      color: #fff;
  }
+ 
+ /* Show Products Page */
+ 
+/* .productbox {
+    background-color: white;
+    height: 300px;
+    width: 600px;
+    padding-top: 1%;
+    padding-left: 3%;
+    margin-left: 30%;
+    clear: left;
+}
+
+*/
+
+ .productbox {
+    margin: auto;
+    height: auto;
+    width: 50%;
+    padding: 10px;
+    background: white !important;
+    overflow: hidden;
+    border-style: solid;
+    border-width: 1em;
+    border-color:  #87b6a7;
+ }   
+
+#productdetails {
+    float: right;
+    width: 60%;
+    margin-right: 5%;
+	font: 2em;
+	margin-top: 2%;
+	color: #6D7276;
+}
+
+#productimage {
+    float: left;
+    width: 20%;
+	display: inline-block;
+	margin-top: 2%;
+	border-radius: none;
+}
