--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,29 +1,94 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Name:</strong>
-  <%= @product.name %>
-</p>
+	
+	<div class="productbox">
+	  
+		<div id="productimage">
+		  <%= image_tag @product.image_url, :style => 'height: 120px; width: 120px;' %>
+		</div>
+	
+		<div id="productdetails">
+			
+			<p class="detailbox">
+			  <strong>Name:</strong>
+			  <%= @product.name %>
+			</p>
 
-<p>
-  <strong>Description:</strong>
-  <%= @product.description %>
-</p>
+			<p class="detailbox">
+			  <strong>Description:</strong>
+			  <%= @product.description %>
+			</p>
+			
+			<p class="detailbox">
+			  <strong>Color:</strong>
+			  <%= @product.color %>
+			</p>
+		
+			<p class="detailbox"> 
+			 <strong>Price:</strong>
+			 <%= number_to_currency(@product.price) %>
+			</p>
+			
+		</div>
+		
+	</div>
+	
+	<div style="margin-top: 20%">
+		<%= link_to 'Edit', edit_product_path(@product) %> |
+		<%= link_to 'Back', products_path %>
+	</div>
+	
 
-<p>
-  <strong>Image url:</strong>
-  <%= @product.image_url %>
-</p>
+<!--
+ <div class="row">
+        <div class="col-sm-3"><%= image_tag @product.image_url, :style => 'height: 120px; width: 120px;' %></div>
+        <div class="col-sm-2"><%= @product.name %></div>
+        <div class="col-sm-2"><%= @product.description %></div>
+        <div class="col-sm-2"><%= @product.color %></div>
+        <div class="col-sm-1"><%= @product.price %></div>
+        <div class="col-sm-1"><%= link_to 'Edit', edit_product_path(@product) %></div>
+        <div class="col-sm-1"><%= link_to 'Destroy', @product, method: :delete, data: { confirm: 'Are you sure?' } %></div>
+      </div>
+-->
 
-<p>
-  <strong>Color:</strong>
-  <%= @product.color %>
-</p>
 
-<p>
-  <strong>Price:</strong>
-  <%= @product.price %>
-</p>
+<!--
+<div>
+  <p>
+    <strong>Name:</strong>
+    <%= @product.name %>
+  </p>
+</div>
+
+<div>
+  <p>
+    <strong>Description:</strong>
+    <%= @product.description %>
+  </p>
+</div>
+
+<div>
+  <p>
+    <strong>Image url:</strong>
+    <%= @product.image_url %>
+  </p>
+</div>
+
+<div>
+  <p>
+    <strong>Color:</strong>
+    <%= @product.color %>
+  </p>
+</div>
+  
+<div>  
+  <p>
+    <strong>Price:</strong>
+    <%= @product.price %>
+  </p>
+</div>
 
 <%= link_to 'Edit', edit_product_path(@product) %> |
 <%= link_to 'Back', products_path %>
+
+-->
