--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -67,7 +67,7 @@
           </ul>
           </ul>
           <!-- login starts here -->
-          <ul class="nav pull-right">
+          <ul class="nav pull-right", id="login">
             <li>
               <% if user_signed_in? %>
                 <%= link_to('Logout', destroy_user_session_path, :method=> :delete) %>
@@ -93,7 +93,7 @@
  
 
 <!-- content starts here -->
-<h1> The Vegan Cheesemonger</h1>
+<h1> Hound & Half Moon</h1>
 <h2> Your source for artisanal plant-based cheeses </h2>
 <div id="main-image" style="text-align: center;"><img src="https://www.freshnlean.com/wp-content/uploads/raw-vegan-almond-cheese.jpg" alt="vegan cheese" width="30%" height="30%";/></div>
 
