--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,40 +1,52 @@
 <p id="notice"><%= notice %></p>
 
 	
-	<div class="productbox">
+<div class="containter", id= "productbox">
+	<h3>About This Product</h3>
+	
+	<div class="row";>
 	  
-		<div id="productimage">
+		<div class="col-md-6"; id="productimage">
 		  <%= image_tag @product.image_url, :style => 'height: 120px; width: 120px;' %>
 		</div>
 	
-		<div id="productdetails">
-			
+		<div class="col-md-6"; id="productdetails">
 			<p class="detailbox">
 			  <strong>Name:</strong>
 			  <%= @product.name %>
 			</p>
-
 			<p class="detailbox">
 			  <strong>Description:</strong>
 			  <%= @product.description %>
 			</p>
-			
 			<p class="detailbox">
 			  <strong>Color:</strong>
 			  <%= @product.color %>
 			</p>
-		
 			<p class="detailbox"> 
 			 <strong>Price:</strong>
 			 <%= number_to_currency(@product.price) %>
 			</p>
-			
+			<p class="detailbox">
+			<strong>Average Rating:</strong> 
+			<div class="rated" data-score="<%= @product.average_rating %>"></div> 
+			</p>
 		</div>
 		
 	</div>
+</div>
+
+<div class="container", id="reviewbox">
+	
+	<div id="commentbox">
+		<%= render 'show_comment' %>
+   		<%= render 'new_comment' %>
+  	</div>
+  	
+</div>
+	
 	
 	<div style="margin-top: 20%">
 		<%= link_to 'Edit', edit_product_path(@product) %> |
 		<%= link_to 'Back', products_path %>
 	</div>
-	
