validation and Pagination

--- a/app/views/products/_show_comment.html.erb
+++ b/app/views/products/_show_comment.html.erb
@@ -18,9 +18,10 @@
     <%= comment.user.first_name %> <small><em><%= "#{time_ago_in_words(comment.created_at)} ago" %></em></small></p>
      <div class="rated" data-score="<%= comment.rating %>"></div>
      <p><%= comment.body %></p>
-    <% if signed_in? && current_user.admin? %>
+    <% if signed_in? && current_user %>
               <span class="glyphicon glyphicon-trash"></span> <%= link_to ' Destroy', product_comment_path(@product,comment), method: :delete, data: { confirm: 'Are you sure?' } %>
             <% end %>
         </div>
     <% end %>
+    <%= will_paginate @comments %>
 </div>
