--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -39,8 +39,8 @@
 <div class="container", id="reviewbox">
 	
 	<div id="commentbox">
-		<%= render 'show_comment' %>
    		<%= render 'new_comment' %>
+   		<%= render 'show_comments' %>
   	</div>
   	
 </div>
